--- a/student1/ninquire.ui
+++ b/student1/ninquire.ui
@@ -36,7 +36,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>姓名：</string>
+    <string>宿舍：</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit">
